--- a/VINCENT_PORTOFOLIO/index.html
+++ b/VINCENT_PORTOFOLIO/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -60,7 +60,7 @@
         </div>
 
           <div class="btn-container">
-          <a href="Curriculum Vitae-CV VIncent Fa.pdf" download="Curriculum Vitae-CV VIncent Fa.pdf">
+          <a href="Curriculum Vitae-CV VIncent Fa .pdf" download="Curriculum Vitae-CV VIncent Fa.pdf">
             <button class="btn btn-color-2">Download CV</button>
           </a>       
         </div>
