--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <img src="whatsapp.webp" class="icon" onclick="location.href='https://wa.me/6287811146999'" alt="Whatsapp" />
         </div>
 
-         <div class="btn-container">
-          <a href="Curriculum Vitae-CV VIncent Fa .pdf" download="Curriculum Vitae-CV VIncent Fernando a.pdf">
+          <div class="btn-container">
+          <a href="Curriculum Vitae-CV VIncent Fernando a.pdf" download="Curriculum Vitae-CV VIncent Fa.pdf">
             <button class="btn btn-color-2">Download CV</button>
           </a>       
         </div>
