--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div id="socials-container">
-          <img src="instagram.webp" class="icon" onclick="location.href='https://www.instagram.com/sensen.nn'" alt="Instagram" />
+          <img src="instagram.webp" class="icon" onclick="location.href='https://www.instagram.com/sensen.nn/profilecard/?igsh=MTRlaDF6cjlsMDU0bA=='" alt="Instagram" />
           <img src="linkedinicon.webp" class="icon" onclick="location.href='https://www.linkedin.com/in/vincent-atmajaya-0a0011355?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app'" alt="Linkedin" />
           <img src="whatsapp.webp" class="icon" onclick="location.href='https://wa.me/6287811146999'" alt="Whatsapp" />
         </div>
