--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.figma.com/proto/D5CNPDHGqUKSvS2tsXbinq/Bos-Variasi?page-id=28%3A466&node-id=955-3834&viewport=3626%2C61%2C0.67&t=cuwahHuYdUDGOKAv-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=955%3A3834&show-proto-sidebar=1';"
+                onclick="location.href='https://www.figma.com/proto/D5CNPDHGqUKSvS2tsXbinq/Bos-Variasi?page-id=28%3A466&node-id=2220-8165&viewport=2556%2C-16%2C0.36&t=5UmYvCwWcqlP0uJ1-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=2220%3A8165&show-proto-sidebar=1';"
               >
                 Live Demo
               </button>
@@ -214,7 +214,7 @@
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://www.figma.com/proto/D5CNPDHGqUKSvS2tsXbinq/Bos-Variasi?page-id=0%3A1&node-id=516-1549&p=f&viewport=708%2C1024%2C0.23&t=fsWwRtHQzBjNxWqK-1&scaling=contain&content-scaling=fixed&starting-point-node-id=516%3A1549&show-proto-sidebar=1';" >
+              onclick="location.href='https://www.figma.com/proto/D5CNPDHGqUKSvS2tsXbinq/Bos-Variasi?page-id=&node-id=516-1549&viewport=2870%2C1080%2C0.28&t=Z8XE0jXLR7iDzRYZ-1&scaling=contain&content-scaling=fixed&starting-point-node-id=516%3A1549';" >
               Live Demo
             </button>
           </div>
