--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
           <div class="btn-container">
-          <a href="Curriculum Vitae-CV VIncent Fernando a.pdf" download="Curriculum Vitae-CV VIncent Fernando Atmajaya.pdf">
+         <a href="Curriculum Vitae-CV VIncent Fernando Atmajaya.pdf" download="Curriculum Vitae-CV VIncent Fernando Atmajaya.pdf">
             <button class="btn btn-color-2">Download CV</button>
           </a>       
         </div>
